# Adaptive_Huffman_Encoding_FGK

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  adhuff_common.c  adhuff_common.h  adhuff_compress.c  adhuff_compress.h  adhuff_decompress.c  adhuff_decompress.h  bin_io.c  bin_io.h  constants.h  log.c  log.h  main.c  node.c  node.h  test.c  test.h
test/: CMakeLists.txt  Makefile  test.c
test-res/: alice.txt
test/res/: 32k_ff.compressed  32k_random.compressed  AB.txt.compressed  ABA.txt.compressed  ABAB.txt.compressed  ALEX.txt  alice.txt.compressed  alice_small.txt  alice_small.txt.compressed  alice_small_small.txt
